--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.2",
     "blueimp-md5": "^2.19.0",
     "core-js": "^3.8.3",
+    "echarts": "^5.4.3",
     "element-plus": "^2.4.2",
     "normalize.css": "^8.0.1",
     "vue": "^3.2.13",
