--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "^5.4.3",
     "element-plus": "^2.4.2",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
