--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "element-plus": "^2.4.2",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "screenfull": "^6.0.2",
+    "svg-sprite-loader": "^6.0.11",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0",
